cmake_minimum_required(VERSION 3.25)
project(Mastering_Critical_SKILLS)

set(CMAKE_CXX_STANDARD 17)
add_executable(01 section_9_char_arrays/easy/01.cpp)
add_executable(02 section_9_char_arrays/easy/02.cpp)
add_executable(03 section_9_char_arrays/easy/03.cpp)
add_executable(04 section_9_char_arrays/easy/04.cpp)
add_executable(05 section_9_char_arrays/easy/05.cpp)
add_executable(06 section_9_char_arrays/easy/06.cpp)
